--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "reactstrap": "^9.1.1"
+    "reactstrap": "^9.1.1",
+    "sweetalert2": "^11.4.20",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0"
+    "eslint": "^8.19.0",
+    "eslint-config-next": "12.2.0",
+    "eslint-plugin-react": "^7.30.1"
   }
 }
