--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "reactstrap": "^9.1.1",
     "sweetalert2": "^11.4.20",
     "uuid": "^8.3.2"
